--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="conf/res"/>
 	<classpathentry kind="src" path="conf/vm"/>
 	<classpathentry kind="src" path="conf/common"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
