--- a/conf/common/db_test.properties
+++ b/conf/common/db_test.properties
@@ -1,8 +1,8 @@
 #
-#Wed Jun 21 10:14:16 CST 2017
-user=qatest
+#Tue Mar 19 14:50:14 CST 2019
+user=root
 port=3306
-password=hainan2010
+password=gzy123
 dbName=test
-host=192.168.20.85
+host=localhost
 dbType=Mysql\u6570\u636E\u5E93
